Что-то поправил

--- a/src/app/components/home-features/home-features.component.html
+++ b/src/app/components/home-features/home-features.component.html
@@ -9,7 +9,7 @@
 
         <div id="three-dimensional">
             <app-cactus-three-dimensional></app-cactus-three-dimensional>
-            <img src="/assets/img/others/arrows-direction.svg" >
+            <img src="/assets/img/others/arrows-direction.svg" alt="">
         </div>
 
         <div class="feature"></div>
