--- a/src/app/components/home-footer/home-footer.component.html
+++ b/src/app/components/home-footer/home-footer.component.html
@@ -3,7 +3,7 @@
     <div class="info-block">
 
         <div class="logo">
-            <img src="/assets/cactussoft.svg">
+            <img src="/assets/cactussoft.svg" alt="">
             <span class="name">
                 Cactus <br>
                 Software
