--- a/src/app/components/home-features/home-features.component.scss
+++ b/src/app/components/home-features/home-features.component.scss
@@ -10,9 +10,9 @@ $tab-size: 780px;
     @media screen and ( max-width: $tab-size ) {
         > .feature{
             min-height: 140px;
-            margin: 0px 20px;
         }
-        grid-template-columns: minmax( auto, 288px );        
+        grid-template-columns: minmax( auto, 288px );   
+        padding: 0px 20px;     
         justify-content: center;
         row-gap: 20px;
     }
@@ -20,6 +20,7 @@ $tab-size: 780px;
 
 
 #three-dimensional{
+    display: grid;
     grid-row: 1/4;
     grid-column: 2/3;
     position: relative;
@@ -49,3 +50,37 @@ $tab-size: 780px;
         }   
     }
 }
+
+.prompt{
+    align-self: end;
+    justify-self: center;
+    margin-bottom: 15px;
+    // transition: .6s;
+
+    display: grid;
+    row-gap: 5px;
+    justify-items: center;
+    color: #757575;
+
+    font-size: 12px;
+    line-height: 85%;
+    opacity: .6;
+    // animation: swing .5s ease-in 2s infinite;
+    animation: flicker 1.5s linear 0s infinite ;
+}
+
+
+
+
+@keyframes flicker {
+    0%{
+        opacity: .5;
+    }
+    50%{
+        opacity: .9;
+    }
+    100%{
+        opacity: .5;
+    }
+}
+
