--- a/src/app/components/home-footer/home-footer.component.html
+++ b/src/app/components/home-footer/home-footer.component.html
@@ -33,7 +33,7 @@
 
         <div class="madeBy">
             Powered by 
-            <a href="https://manager.cactusweb.io" target="_blank" rel="noopener" style="color: #fff;">
+            <a href="https://manager.cactusweb.io" target="_blank" rel="noopener">
                 CactusDashboard
             </a>
         </div>
