--- a/src/app/components/home-faq/home-faq.component.html
+++ b/src/app/components/home-faq/home-faq.component.html
@@ -8,48 +8,34 @@
 
         <div class="card">
             <span class="hr"></span>
-            <h3>1. Question </h3>
+            <h3>How can I purchase CactusSoft? </h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
             
-            <p>A chrome extension which, automates the checkout process on various websites and platforms.</p>
+            <p>Make sure to follow our social media <br> and have notifications on for future restocks</p>
         </div>
         
         <div class="card">
             <span class="hr"></span>
-            <h3>2. Question </h3>
+            <h3>What's CactusSoft's retail price?</h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
-            <p>A chrome extension which, automates the checkout process on various websites and platforms.</p>
+            <p>Initial cost is $40 (first month included), <br> renewal is $25/month</p>
         </div>
         
         <div class="card">
             <span class="hr"></span>
-            <h3>3. Question </h3>
+            <h3>Can I resell my license?</h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
-            <p>A chrome extension which, automates the checkout process on various websites and platforms.</p>
+            <p>We offer both resellable and non-resellable <br> copies. All unbindable keys are resalable.
+            </p>
         </div>
         
         <div class="card">
             <span class="hr"></span>
-            <h3>4. Question </h3>
+            <h3>Can I get a refund?</h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
-            <p>A chrome extension which, automates the checkout process on various websites and platforms.</p>
+            <p>Unfortunately, all sales are final, <br> and no refunds will be processed.</p>
         </div>
         
-        <div class="card">
-            <span class="hr"></span>
-            <h3>5. Question </h3>
-            <img src="/assets/img/icons/open-card.svg" alt="open answere">
-            <p>A chrome extension which, automates the checkout process on various websites and platforms.</p>
-        </div>
-        
-        <div class="card">
-            <span class="hr"></span>
-            <h3>6. Question </h3>
-            <img src="/assets/img/icons/open-card.svg" alt="open answere">
-            <p>A chrome extension which, automates the checkout process on various websites and platforms.</p>
-        </div>
-
-
 
     </div>
 
