--- a/src/app/components/home-features/home-features.component.html
+++ b/src/app/components/home-features/home-features.component.html
@@ -4,8 +4,17 @@
 
     <div class="features">
 
-        <div class="feature"></div>
-        <div class="feature"></div>
+        <div class="feature">
+            <img src="/assets/img/features/feature-1.svg" alt="">
+            <h3>Constant Updates</h3>
+            <p>Giving members the best chance at future restocks whether its new platforms or quick module changes.</p>
+        </div>
+
+        <div class="feature">
+            <img src="/assets/img/features/feature-2.svg" alt="">
+            <h3>Support system</h3>
+            <p>24/7 Ticket Support from our highly trained staff ready to assist 1 on 1 with any questions.</p>
+        </div>
 
         <div id="three-dimensional" (mouseenter)="hidePrompt()" (mouseleave)="showPrompt()">
             <app-cactus-three-dimensional></app-cactus-three-dimensional>
@@ -18,8 +27,17 @@
             </div>
         </div>
 
-        <div class="feature"></div>
-        <div class="feature"></div>
+        <div class="feature">
+            <img src="/assets/img/features/feature-3.svg" alt="">
+            <h3>Multiple profile support</h3>
+            <p>Easily manage unlimited profiles with simple to use import/export settings.</p>
+        </div>
+
+        <div class="feature">
+            <img src="/assets/img/features/feature-4.svg" alt="">
+            <h3>Restock guides</h3>
+            <p>Our members will always be prepared with the best setups for drops and restocks.</p>
+        </div>
 
     </div>
 
