--- a/src/app/components/home-header/home-header.component.html
+++ b/src/app/components/home-header/home-header.component.html
@@ -3,8 +3,10 @@
     <app-navbar></app-navbar>
 
     <div class="info">
-        <h1>Great tool-set <br> to increase your winrate</h1>
-        <p>We’re here to help you <br> cop bots and items</p>
+         
+        <h1>New level <br> of 3rd party software</h1>
+          
+        <p>Advanced software <br> created to help you secure resellable goods <br>at retail prices</p>
         <button class="standart-btn">Sold out</button>
     </div>
 
