--- a/src/app/components/tool-discord-alo/tool-discord-alo.component.html
+++ b/src/app/components/tool-discord-alo/tool-discord-alo.component.html
@@ -4,11 +4,9 @@
     </div>
 
     <div class="info">
-        <h3>Discord ALO</h3>
+        <h3>Cactus ALO</h3>
         <p class="descript">
-            A chrome extension which, automates <br> 
-            the checkout process on various websites <br>
-            and platforms.
+            Web-based software. <br> No need to download files, <br> just open the browser with one click
         </p>
         
         <div class="features">
@@ -19,7 +17,7 @@
                     <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
 
-                AIO Autofill
+                Discord link opener
             </div>
             <div class="feature">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -27,7 +25,7 @@
                     <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
 
-                Stripe Autofill + Autocheckout
+                Discord joiner
             </div>
             <div class="feature">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -35,7 +33,7 @@
                     <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
 
-                Shopify Request mode
+                Discord nitro claimer
             </div>
 
             <div class="feature">
@@ -44,7 +42,7 @@
                     <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
 
-                TL dashboard Request + Front mode
+                QR Decoder
             </div>
             <div class="feature">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -52,15 +50,7 @@
                     <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
 
-                MetaLabs Request mode
-            </div>
-            <div class="feature">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                    <circle cx="9" cy="9" r="9" fill="#00AE98"/>
-                    <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-
-                Adidas Autofill + Autocheckout
+                Webhooks
             </div>
 
         </div>
