--- a/src/app/components/tool-cactus-scripts/tool-cactus-scripts.component.html
+++ b/src/app/components/tool-cactus-scripts/tool-cactus-scripts.component.html
@@ -6,9 +6,7 @@
     <div class="info">
         <h3>CactusScripts</h3>
         <p class="descript">
-            A chrome extension which, automates <br> 
-            the checkout process on various websites <br>
-            and platforms.
+            A chrome extension, which automates <br> the checkout process on various <br> websites and platforms.
         </p>
         
         <div class="features">
@@ -27,7 +25,7 @@
                     <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
 
-                Stripe Autofill + Autocheckout
+                Stripe autocheckout
             </div>
             <div class="feature">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -35,7 +33,15 @@
                     <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
 
-                Shopify Request mode
+                Shopify autocheckout
+            </div>
+            <div class="feature">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                    <circle cx="9" cy="9" r="9" fill="#00AE98"/>
+                    <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+
+                Adidas autocheckout
             </div>
 
             <div class="feature">
@@ -44,7 +50,7 @@
                     <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
 
-                TL dashboard Request + Front mode
+                TL Dash scripts
             </div>
             <div class="feature">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -52,7 +58,7 @@
                     <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
 
-                MetaLabs Request mode
+                MetaLabs (Hyper) script
             </div>
             <div class="feature">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -61,6 +67,22 @@
                 </svg>
 
                 Adidas Autofill + Autocheckout
+            </div>
+            <div class="feature">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                    <circle cx="9" cy="9" r="9" fill="#00AE98"/>
+                    <path d="M6 9L8 11L12 7" stroke="#262626" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+
+                10+ other scripts available
+            </div>
+            <div class="feature">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                    <circle cx="9" cy="9" r="8.5" stroke="#00AE98"/>
+                    <path d="M12 9H9M9 9H6M9 9V12M9 9V6" stroke="#00AE98" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+
+                Many more in development
             </div>
 
         </div>
