--- a/src/app/components/tool-discord-alo/tool-discord-alo.component.html
+++ b/src/app/components/tool-discord-alo/tool-discord-alo.component.html
@@ -6,7 +6,7 @@
     <div class="info">
         <h3>Cactus ALO</h3>
         <p class="descript">
-            Web-based software. <br> No need to download files, <br> just open the browser with one click
+            Web-based software. <br> No need to download files, <br> just open the browser with one click.
         </p>
         
         <div class="features">
