--- a/src/app/components/home-faq/home-faq.component.html
+++ b/src/app/components/home-faq/home-faq.component.html
@@ -11,14 +11,14 @@
             <h3>How can I purchase CactusSoft? </h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
             
-            <p>Make sure to follow our social media <br> and have notifications on for future restocks</p>
+            <p>Make sure to follow our social media <br> and have notifications on for future restocks.</p>
         </div>
         
         <div class="card">
             <span class="hr"></span>
             <h3>What's CactusSoft's retail price?</h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
-            <p>Initial cost is $40 (first month included), <br> renewal is $25/month</p>
+            <p>Initial cost is $40 (first month included), <br> renewal is $25/month.</p>
         </div>
         
         <div class="card">
