--- a/src/app/components/home-header/home-header.component.html
+++ b/src/app/components/home-header/home-header.component.html
@@ -1,6 +1,14 @@
 <header class="response-bg "> 
 
-    <app-navbar></app-navbar>
+
+    <div class="bckg parallax-block" >
+        <div class="first response-bg" data-speed="0.5"></div>
+        <div class="second response-bg" data-speed="1.5"></div>
+        <div class="third response-bg" data-speed="2.8"></div>
+    </div>
+
+
+    <app-navbar [isRouterLink]="true"></app-navbar>
 
     <div class="info">
          
